--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        #app{
+            width: 100px;
+            height: 100px;
+            background-color: #f44;
+        }
+    </style>
 </head>
 <body>
+<div id="app">
+    <input type="text">
+</div>
 
 </body>
 </html>
