--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         #app{
             width: 100px;
             height: 100px;
+            box-sizing: border-box;
             background-color: #f44;
         }
     </style>
