--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             height: 100px;
             box-sizing: border-box;
             background-color: #f44;
+            box-shadow: 0 0 1px 1px;
         }
     </style>
 </head>
