--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             box-sizing: border-box;
             background-color: #f44;
             box-shadow: 0 0 1px 1px;
+            position: relative;
+            top: 0;
+            left: 0;
         }
     </style>
 </head>
