--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
     </style>
 </head>
 <body>
-<div id="app">
-    <input type="text">
-</div>
+<input type="text">
 
+<div id="app">
+
+</div>
+<script>
+    var a=1;
+    var b=2;
+</script>
 </body>
 </html>
